# openray

./: CMakeLists.txt  readme.md
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
src/config/: config.cpp  config.h
src/io/: io.cpp  io.h
src/math/: fast_math.cpp  fast_math.h  math.cpp  math.h
src/render/: render.cpp  render.h
src/scene/: scene.cpp  scene.h
src/structures/: primitive.cpp  primitive.h  segment.cpp  segment.h
tests/: CMakeLists.txt  gtest.cpp
tests/structures/: test_segment.cpp
